# poker

./: README.md  main.py  pyproject.toml
agent/: __init__.py  game_state.py  harness.py  prompts.py  replay.py  tools.py
docs/: V2.md  V3.md
poker/: __init__.py  cards.py  cli.py  equity.py  evaluation.py  game.py  gui.py  player.py  ranges.py
tests/: test_agents.py  test_equity.py  test_evaluation.py  test_game.py
ui/: __init__.py  app.py
