[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poker"
version = "1.0.0"
description = "Texas Hold 'em: hand evaluation, equity simulation, and a hot-seat terminal game"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = []

[project.scripts]
poker = "poker.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.hatch.build.targets.wheel]
packages = ["poker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
